@@ -170,6 +170,8 @@ parse_workaround_flags(char *str)
         flags |= IPMI_WORKAROUND_FLAGS_SUPERMICRO_2_0_SESSION;
       else if (!strcasecmp(tok, IPMI_WORKAROUND_FLAGS_SUN_2_0_SESSION_STR))
         flags |= IPMI_WORKAROUND_FLAGS_SUN_2_0_SESSION;
+      else if (!strcasecmp(tok, IPMI_WORKAROUND_FLAGS_ASUS_2_0_SESSION_STR))
+        flags |= IPMI_WORKAROUND_FLAGS_ASUS_2_0_SESSION;
       tok = strtok(NULL, ",");
     }
   return flags;
